Compiler-Design-main/Program-3(Syntax Analyzer)/y.output
Grammar

    0 $accept: lines $end

    1 lines: lines S
    2      | S

    3 S: id '=' E '\n'
    4  | E '\n'

    5 E: E '+' E
    6  | E '-' E
    7  | E '*' E
    8  | E '/' E
    9  | '-' E
   10  | '(' E ')'
   11  | NUM
   12  | id
   13  | SIN '(' E ')'
   14  | COS '(' E ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'(' (40) 10 13 14
')' (41) 10 13 14
'*' (42) 7
'+' (43) 5
'-' (45) 6 9
'/' (47) 8
'=' (61) 3
error (256)
SIN (258) 13
COS (259) 14
NUM (260) 11
id (261) 3 12
UMINUS (262)


Nonterminals, with rules where they appear

$accept (16)
    on left: 0
lines (17)
    on left: 1 2, on right: 0 1
S (18)
    on left: 3 4, on right: 1 2
E (19)
    on left: 5 6 7 8 9 10 11 12 13 14, on right: 3 4 5 6 7 8 9 10 13
    14


state 0

    0 $accept: . lines $end

    SIN  shift, and go to state 1
    COS  shift, and go to state 2
    NUM  shift, and go to state 3
    id   shift, and go to state 4
    '-'  shift, and go to state 5
    '('  shift, and go to state 6

    lines  go to state 7
    S      go to state 8
    E      go to state 9


state 1

   13 E: SIN . '(' E ')'

    '('  shift, and go to state 10


state 2

   14 E: COS . '(' E ')'

    '('  shift, and go to state 11


state 3

   11 E: NUM .

    $default  reduce using rule 11 (E)


state 4

    3 S: id . '=' E '\n'
   12 E: id .

    '='  shift, and go to state 12

    $default  reduce using rule 12 (E)


state 5

    9 E: '-' . E

    SIN  shift, and go to state 1
    COS  shift, and go to state 2
    NUM  shift, and go to state 3
    id   shift, and go to state 13
    '-'  shift, and go to state 5
    '('  shift, and go to state 6

    E  go to state 14


state 6

   10 E: '(' . E ')'

    SIN  shift, and go to state 1
    COS  shift, and go to state 2
    NUM  shift, and go to state 3
    id   shift, and go to state 13
    '-'  shift, and go to state 5
    '('  shift, and go to state 6

    E  go to state 15


state 7

    0 $accept: lines . $end
    1 lines: lines . S

    $end  shift, and go to state 16
    SIN   shift, and go to state 1
    COS   shift, and go to state 2
    NUM   shift, and go to state 3
    id    shift, and go to state 4
    '-'   shift, and go to state 5
    '('   shift, and go to state 6

    S  go to state 17
    E  go to state 9


state 8

    2 lines: S .

    $default  reduce using rule 2 (lines)


state 9

    4 S: E . '\n'
    5 E: E . '+' E
    6  | E . '-' E
    7  | E . '*' E
    8  | E . '/' E

    '+'   shift, and go to state 18
    '-'   shift, and go to state 19
    '*'   shift, and go to state 20
    '/'   shift, and go to state 21
    '\n'  shift, and go to state 22


state 10

   13 E: SIN '(' . E ')'

    SIN  shift, and go to state 1
    COS  shift, and go to state 2
    NUM  shift, and go to state 3
    id   shift, and go to state 13
    '-'  shift, and go to state 5
    '('  shift, and go to state 6

    E  go to state 23


state 11

   14 E: COS '(' . E ')'

    SIN  shift, and go to state 1
    COS  shift, and go to state 2
    NUM  shift, and go to state 3
    id   shift, and go to state 13
    '-'  shift, and go to state 5
    '('  shift, and go to state 6

    E  go to state 24


state 12

    3 S: id '=' . E '\n'

    SIN  shift, and go to state 1
    COS  shift, and go to state 2
    NUM  shift, and go to state 3
    id   shift, and go to state 13
    '-'  shift, and go to state 5
    '('  shift, and go to state 6

    E  go to state 25


state 13

   12 E: id .

    $default  reduce using rule 12 (E)


state 14

    5 E: E . '+' E
    6  | E . '-' E
    7  | E . '*' E
    8  | E . '/' E
    9  | '-' E .

    $default  reduce using rule 9 (E)


state 15

    5 E: E . '+' E
    6  | E . '-' E
    7  | E . '*' E
    8  | E . '/' E
   10  | '(' E . ')'

    '+'  shift, and go to state 18
    '-'  shift, and go to state 19
    '*'  shift, and go to state 20
    '/'  shift, and go to state 21
    ')'  shift, and go to state 26


state 16

    0 $accept: lines $end .

    $default  accept


state 17

    1 lines: lines S .

    $default  reduce using rule 1 (lines)


state 18

    5 E: E '+' . E

    SIN  shift, and go to state 1
    COS  shift, and go to state 2
    NUM  shift, and go to state 3
    id   shift, and go to state 13
    '-'  shift, and go to state 5
    '('  shift, and go to state 6

    E  go to state 27


state 19

    6 E: E '-' . E

    SIN  shift, and go to state 1
    COS  shift, and go to state 2
    NUM  shift, and go to state 3
    id   shift, and go to state 13
    '-'  shift, and go to state 5
    '('  shift, and go to state 6

    E  go to state 28


state 20

    7 E: E '*' . E

    SIN  shift, and go to state 1
    COS  shift, and go to state 2
    NUM  shift, and go to state 3
    id   shift, and go to state 13
    '-'  shift, and go to state 5
    '('  shift, and go to state 6

    E  go to state 29


state 21

    8 E: E '/' . E

    SIN  shift, and go to state 1
    COS  shift, and go to state 2
    NUM  shift, and go to state 3
    id   shift, and go to state 13
    '-'  shift, and go to state 5
    '('  shift, and go to state 6

    E  go to state 30


state 22

    4 S: E '\n' .

    $default  reduce using rule 4 (S)


state 23

    5 E: E . '+' E
    6  | E . '-' E
    7  | E . '*' E
    8  | E . '/' E
   13  | SIN '(' E . ')'

    '+'  shift, and go to state 18
    '-'  shift, and go to state 19
    '*'  shift, and go to state 20
    '/'  shift, and go to state 21
    ')'  shift, and go to state 31


state 24

    5 E: E . '+' E
    6  | E . '-' E
    7  | E . '*' E
    8  | E . '/' E
   14  | COS '(' E . ')'

    '+'  shift, and go to state 18
    '-'  shift, and go to state 19
    '*'  shift, and go to state 20
    '/'  shift, and go to state 21
    ')'  shift, and go to state 32


state 25

    3 S: id '=' E . '\n'
    5 E: E . '+' E
    6  | E . '-' E
    7  | E . '*' E
    8  | E . '/' E

    '+'   shift, and go to state 18
    '-'   shift, and go to state 19
    '*'   shift, and go to state 20
    '/'   shift, and go to state 21
    '\n'  shift, and go to state 33


state 26

   10 E: '(' E ')' .

    $default  reduce using rule 10 (E)


state 27

    5 E: E . '+' E
    5  | E '+' E .
    6  | E . '-' E
    7  | E . '*' E
    8  | E . '/' E

    '*'  shift, and go to state 20
    '/'  shift, and go to state 21

    $default  reduce using rule 5 (E)


state 28

    5 E: E . '+' E
    6  | E . '-' E
    6  | E '-' E .
    7  | E . '*' E
    8  | E . '/' E

    '*'  shift, and go to state 20
    '/'  shift, and go to state 21

    $default  reduce using rule 6 (E)


state 29

    5 E: E . '+' E
    6  | E . '-' E
    7  | E . '*' E
    7  | E '*' E .
    8  | E . '/' E

    $default  reduce using rule 7 (E)


state 30

    5 E: E . '+' E
    6  | E . '-' E
    7  | E . '*' E
    8  | E . '/' E
    8  | E '/' E .

    $default  reduce using rule 8 (E)


state 31

   13 E: SIN '(' E ')' .

    $default  reduce using rule 13 (E)


state 32

   14 E: COS '(' E ')' .

    $default  reduce using rule 14 (E)


state 33

    3 S: id '=' E '\n' .

    $default  reduce using rule 3 (S)
